# GlassView-AI

./: .gitignore  README.md
Backend/: package-lock.json  package.json  server.js
Frontend/: index.html  overlay.html  package-lock.json  package.json  style.css
Frontend/src-tauri/: Cargo.toml  tauri.conf.json
Frontend/src-tauri/capabilities/: default.json
Frontend/src-tauri/src/: main.rs
