[package]
name = "app"
version = "0.1.0"
description = "AI Screen Assistant"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
windows = { version = "0.58", features = [
  "Win32_UI_WindowsAndMessaging", 
  "Win32_Graphics_Dwm", 
  "Win32_UI_HiDpi"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
png = "0.17"
screenshots = "0.7"
